--- a/templates/post.html
+++ b/templates/post.html
@@ -412,7 +412,7 @@ $(function() {
                           like_button = '<li class="item-like {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li>';
                         }
                         var created = new timeago(null, 'zh_CN').format(reply.created);
-                        var reply_text = '<div class="PostStream-item" data-index="' + index + '" data-time="' + reply.created + '" data-number="' + index + '" data-id="' + reply.id + '" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/' + reply.author_username + '">' + avatar_text + '<span class="username">' + reply.author_username + '</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="' + reply.created + '" title="' + reply.created + '" data-humantime="true">' + created + '</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#' + index + ' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="' + reply.created + '">' + reply.created + '</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#' + index + '</span></li></ul></header><div class="Post-body">' + reply.content + '</div><aside class="Post-actions"><ul>'+like_button+'<li class="item-reply {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag {%if not user_info%}logIn{%endif%}"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul>' + like_users_text + reply_users_text + '</ul></footer></div></article></div>';
+                        var reply_text = '<div class="PostStream-item" data-index="' + index + '" data-time="' + reply.created + '" data-number="' + index + '" data-id="' + reply.id + '" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/' + reply.author_username + '">' + avatar_text + '<span class="username">' + reply.author_username + '</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="' + reply.created + '" title="' + reply.created + '" data-humantime="true">' + created + '</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#' + index + ' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="' + reply.created + '">' + reply.created + '</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#' + index + '</span></li></ul></header><div class="Post-body">' + reply.content + '</div><aside class="Post-actions"><ul>'+like_button+'<li class="item-reply {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag {%if not user_info%}logIn{%endif%}"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul>' + like_users_text + reply_users_text + '</ul></footer></div></article><div class="Post-quoteButtonContainer"></div></div>';
                         all_replys_text += reply_text;
 
                     }
@@ -438,7 +438,50 @@ $(function() {
     });
 });
 
+function getSelected() {
+  if(window.getSelection) { return window.getSelection(); }
+  else if(document.getSelection) { return document.getSelection(); }
+  else {
+    var selection = document.selection && document.selection.createRange();
+    if(selection.text) { return selection.text; }
+    return false;
+  }
+  return false;
+}
+
 $(document).ready(function() {
+  
+
+$(document).on('mouseup', '.Post-body', function(e) {
+    var selection = getSelected();
+
+    if (selection!='') {
+        var xx=e.pageX;
+        var yy=e.pageY;
+
+    $(this).parent().parent().parent().find('.Post-quoteButtonContainer').append('<button class="Button PostQuoteButton hasIcon" type="button" title="Quote" style="left: '+xx+'px; top: '+yy+'px; display: block;"><i class="icon fa fa-fw fa-quote-left Button-icon"></i><span class="Button-label">引用</span></button>');
+    }
+    
+
+    
+});
+
+
+
+$(document).on('click', '.PostQuoteButton', function(e) { 
+  alert('dddd');
+  });
+
+$(document).on('mousedown', 'body', function(e) {
+  e = window.event || e; // 兼容IE7
+        obj = $(e.srcElement || e.target);
+          if ($(obj).is(".PostQuoteButton,.PostQuoteButton *")) { 
+           // alert('内部区域'); 
+        } else {
+            $('.PostQuoteButton').remove();
+        } 
+    
+});
     
     {%if user_info%}
     $(document).on('click', '.item-flag', function() {
@@ -494,7 +537,7 @@ $(document).ready(function() {
                     $('.Composer').removeClass('visible');
                     $('.Composer').css("display", "none");
 
-                    var reply_text = '<div class="PostStream-item" data-index="0" data-time="2016-04-27T00:34:10.000Z" data-number="1" data-id="23077" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/{{user_info.username}}">{%if post.author_avatar%}<img class="Avatar PostUser-avatar" src="{{user_info.avatar}}">{%else%}<span class="Avatar PostUser-avatar" style="background: rgb(208, 160, 229);">{{user_info.username|format_username}}</span>{%endif%}<span class="username">{{user_info.username}}</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00" title="Tuesday, March 29, 2016 5:53 PM" data-humantime="true">29 Mar</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">Post #6</span> <span class="PostMeta-time"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00">Tuesday, March 29, 2016 5:53 PM</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#0</span></li></ul></header><div class="Post-body">' + content + '</div><aside class="Post-actions"><ul><li class="item-like"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li><li class="item-reply"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul></ul></footer></div></article></div>'
+                    var reply_text = '<div class="PostStream-item" data-index="0" data-time="2016-04-27T00:34:10.000Z" data-number="1" data-id="23077" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/{{user_info.username}}">{%if post.author_avatar%}<img class="Avatar PostUser-avatar" src="{{user_info.avatar}}">{%else%}<span class="Avatar PostUser-avatar" style="background: rgb(208, 160, 229);">{{user_info.username|format_username}}</span>{%endif%}<span class="username">{{user_info.username}}</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00" title="Tuesday, March 29, 2016 5:53 PM" data-humantime="true">29 Mar</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">Post #6</span> <span class="PostMeta-time"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00">Tuesday, March 29, 2016 5:53 PM</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#0</span></li></ul></header><div class="Post-body">' + content + '</div><aside class="Post-actions"><ul><li class="item-like"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li><li class="item-reply"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul></ul></footer></div></article><div class="Post-quoteButtonContainer"></div></div>'
                     $('.ReplyPlaceholder').parent().before(reply_text);
                     if (data_type == 'to_reply') {
                         var data_index = $("[data-id='" + data_id + "']").attr("data-index");
