--- a/templates/post.html
+++ b/templates/post.html
@@ -164,13 +164,27 @@
                         {%if post.like_users%}
                         <li class="item-liked">
                           <div class="Post-likedBy">
-                            <i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/user/{{post.like_user}}"><span class="username">{{post.like_users}}</span></a>
+                            <i class="icon fa fa-fw fa-thumbs-o-up "></i>
+                            <a href="/user/{{post.like_user}}">
+                              <span class="username">{{post.like_users}}</span>
+                            </a>
                             赞了它.
                           </div>
                         </li>
                         {%endif%}
                         {%if post.reply_users%}
-                        <li class="item-replies"><div class="Post-mentionedBy"><span class="Post-mentionedBy-summary"><i class="icon fa fa-fw fa-reply "></i><a href="/post/{{post.post_id}}?reply=0" data-number="0"><span class="username">{{post.reply_users}}</span></a> 回复了它.</span><ul class="Dropdown-menu Post-mentionedBy-preview fade"></ul></div></li>
+                        <li class="item-replies">
+                          <div class="Post-mentionedBy">
+                            <span class="Post-mentionedBy-summary">
+                              <i class="icon fa fa-fw fa-reply "></i>
+                              <a href="/post/{{post.post_id}}?reply=0" data-number="0">
+                                <span class="username">{{post.reply_users}}</span>
+                              </a>
+                              回复了它.
+                            </span>
+                            <ul class="Dropdown-menu Post-mentionedBy-preview fade"></ul>
+                          </div>
+                        </li>
                         {%endif%}
                       </ul>
                     </footer>
@@ -255,7 +269,9 @@
               <div class="PostStream-item">
                 <article class="Post ReplyPlaceholder {%if not user_info%}logIn{%endif%}">
                   <header class="Post-header">
-                    <span class="Avatar PostUser-avatar" {%if user_info%}style="background: rgb(160, 176, 229);"{%endif%}>{%if user_info%}{{user_info.username|format_username}}{%endif%}</span>
+                    <span class="Avatar PostUser-avatar" {%if user_info%}style="background: rgb(160, 176, 229);"{%endif%}>
+                      {%if user_info%}{{user_info.username|format_username}}{%endif%}
+                    </span>
                     回复一发...
                   </header>
                 </article>
@@ -291,7 +307,9 @@
           </ul>
           <div class="Composer-content">
             <div class="ComposerBody ">
-              <span class="Avatar ComposerBody-avatar" {%if user_info%}style="background: rgb(160, 176, 229);"{%endif%}>{%if user_info%}{{user_info.username|format_username}}{%endif%}</span>
+              <span class="Avatar ComposerBody-avatar" {%if user_info%}style="background: rgb(160, 176, 229);"{%endif%}>
+                {%if user_info%}{{user_info.username|format_username}}{%endif%}
+              </span>
               <div class="ComposerBody-content">
                 <ul class="ComposerBody-header">
                   <li class="item-title">
@@ -459,31 +477,33 @@ $(document).on('mouseup', '.Post-body', function(e) {
         var xx=e.pageX;
         var yy=e.pageY;
 
-    $(this).parent().parent().parent().find('.Post-quoteButtonContainer').append('<button class="Button PostQuoteButton hasIcon" type="button" title="Quote" style="left: '+xx+'px; top: '+yy+'px; display: block;"><i class="icon fa fa-fw fa-quote-left Button-icon"></i><span class="Button-label">引用</span></button>');
+    var PostStream_item= $(this).parent().parent().parent();
+    PostStream_item.find('.Post-quoteButtonContainer').append('<button class="Button PostQuoteButton hasIcon {%if not user_info%}logIn{%endif%}" type="button" title="Quote" style="left: '+xx+'px; top: '+yy+'px; display: block;" data-text="'+selection+'"><i class="icon fa fa-fw fa-quote-left Button-icon"></i><span class="Button-label">引用</span></button>');
     }
-    
-
-    
 });
 
 
-
-$(document).on('click', '.PostQuoteButton', function(e) { 
-  alert('dddd');
-  });
 
 $(document).on('mousedown', 'body', function(e) {
   e = window.event || e; // 兼容IE7
-        obj = $(e.srcElement || e.target);
-          if ($(obj).is(".PostQuoteButton,.PostQuoteButton *")) { 
-           // alert('内部区域'); 
-        } else {
-            $('.PostQuoteButton').remove();
-        } 
-    
+  obj = $(e.srcElement || e.target);
+  if ($(obj).is(".PostQuoteButton,.PostQuoteButton *")) {
+    // alert('内部区域'); 
+  } else {
+    $('.PostQuoteButton').remove();
+  }      
 });
     
     {%if user_info%}
+    $(document).on('click', '.PostQuoteButton', function(e) { 
+      //alert('dddd');
+      $('.Composer').addClass('normal');
+        $('.Composer').addClass('visible');
+        $('.Composer').css("display", "block");
+
+      $('.Composer .Composer-flexible').append('<blockquote class="uncited"><div><p><a href="https://discuss.flarum.org/d/2352/3" class="PostMention" data-id="20296">BlackSheep</a> '+$(this).attr('data-text')+'</p></div></blockquote><br>');
+    });
+
     $(document).on('click', '.item-flag', function() {
         var modal = '<div class="Modal modal-dialog FlagPostModal Modal--small"><div class="Modal-content"><div class="Modal-close App-backControl"><button class="Button Button--icon Button--link hasIcon" type="button"><i class="icon fa fa-fw fa-times Button-icon"></i></button></div><form><div class="Modal-header"><h3 class="App-titleControl App-titleControl--text">Flag Post</h3></div><div class="Modal-alert"></div><div class="Modal-body"><div class="Form Form--centered"><div class="Form-group"><div><label class="checkbox"><input type="radio" name="reason" value="off_topic"><strong>Off-topic</strong>This post is not relevant to the current discussion and should be moved elsewhere.</label><label class="checkbox"><input type="radio" name="reason" value="inappropriate"><strong>Inappropriate</strong>This post is offensive, abusive, or violates our <a>community guidelines</a>.</label><label class="checkbox"><input type="radio" name="reason" value="spam"><strong>Spam</strong>This post is an advertisement.</label><label class="checkbox"><input type="radio" name="reason" value="other"><strong>Other</strong></label></div></div><div class="Form-group"><button class="Button Button--primary Button--block disabled" type="submit" disabled="" title="Flag Post"><span class="Button-label">Flag Post</span></button></div></div></div></form></div></div>';
         $('.ModalManager').html(modal);
@@ -568,7 +588,7 @@ $(document).on('mousedown', 'body', function(e) {
         var data_index = item.attr('data-index');
         var username = item.find('.PostUser .username').text();
         //$('.Composer textarea').val('@'+username+'#'+data_id+' ');
-        $('.Composer .Composer-flexible').html('<a href="/post/{{post.post_id}}?reply=' + data_index + '" class="PostMention" data-id="' + data_id + '">' + username + '</a>&nbsp;');
+        $('.Composer .Composer-flexible').append('<a href="/post/{{post.post_id}}?reply=' + data_index + '" class="PostMention" data-id="' + data_id + '">' + username + '</a>&nbsp;');
 
         $('.item-submit').attr('data-type', 'to_reply');
         $('.item-submit').attr('data-id', data_id);
