--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,4 @@
-{% extends 'layout.html' %} 
-{% block title %}{{post.title}}- 游侠{% endblock %}
-{% block stylesheet %} {% endblock %} {% block main %}
+{% extends 'layout.html' %} {% block title %}{{post.title}}- 游侠{% endblock %} {% block stylesheet %} {% endblock %} {% block main %}
 <main class="App-content">
   <div id="content" style="padding-bottom: 0px;">
     <div class="DiscussionPage">
@@ -146,7 +144,19 @@
                             </button>
                             <ul class="Dropdown-menu dropdown-menu Dropdown-menu--right">
                               {%if user_info.uid == post.author_id%}
-                              <li class="item-edit"><button class=" hasIcon" type="button" title="编辑"><i class="icon fa fa-fw fa-pencil Button-icon"></i><span class="Button-label">编辑</span></button></li><li class="Dropdown-separator"></li><li class="item-hide"><button class=" hasIcon" type="button" title="删除"><i class="icon fa fa-fw fa-trash-o Button-icon"></i><span class="Button-label">删除</span></button></li>
+                              <li class="item-edit">
+                                <button class=" hasIcon" type="button" title="编辑">
+                                  <i class="icon fa fa-fw fa-pencil Button-icon"></i>
+                                  <span class="Button-label">编辑</span>
+                                </button>
+                              </li>
+                              <li class="Dropdown-separator"></li>
+                              <li class="item-hide">
+                                <button class=" hasIcon" type="button" title="删除">
+                                  <i class="icon fa fa-fw fa-trash-o Button-icon"></i>
+                                  <span class="Button-label">删除</span>
+                                </button>
+                              </li>
                               {%else%}
                               <li class="item-flag {%if not user_info%}logIn{%endif%}">
                                 <button class=" hasIcon" type="button" title="举报">
@@ -172,8 +182,7 @@
                             赞了它.
                           </div>
                         </li>
-                        {%endif%}
-                        {%if post.reply_users%}
+                        {%endif%} {%if post.reply_users%}
                         <li class="item-replies">
                           <div class="Post-mentionedBy">
                             <span class="Post-mentionedBy-summary">
@@ -270,7 +279,7 @@
               <div class="PostStream-item">
                 <article class="Post ReplyPlaceholder {%if not user_info%}logIn{%endif%}">
                   <header class="Post-header">
-                    <span class="Avatar PostUser-avatar" {%if user_info%}style="background: rgb(160, 176, 229);"{%endif%}>
+                    <span class="Avatar PostUser-avatar" {%if user_info%}style="background: rgb(160, 176, 229);" {%endif%}>
                       {%if user_info%}{{user_info.username|format_username}}{%endif%}
                     </span>
                     回复一发...
@@ -308,7 +317,7 @@
           </ul>
           <div class="Composer-content">
             <div class="ComposerBody ">
-              <span class="Avatar ComposerBody-avatar" {%if user_info%}style="background: rgb(160, 176, 229);"{%endif%}>
+              <span class="Avatar ComposerBody-avatar" {%if user_info%}style="background: rgb(160, 176, 229);" {%endif%}>
                 {%if user_info%}{{user_info.username|format_username}}{%endif%}
               </span>
               <div class="ComposerBody-content">
@@ -390,8 +399,6 @@
 <script src="{{static_path}}/js/timeago.min.js"></script>
 <script type="text/javascript">
 $(function() {
-
-
     var pageNum = 1;
 
     // dropload
@@ -426,9 +433,9 @@ $(function() {
                         }
                         var like_button = '';
                         if (reply.like_id) {
-                          like_button = '<li class="item-like liked {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="已赞"><span class="Button-label">已赞</span></button></li>';
+                            like_button = '<li class="item-like liked {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="已赞"><span class="Button-label">已赞</span></button></li>';
                         } else {
-                          like_button = '<li class="item-like {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li>';
+                            like_button = '<li class="item-like {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li>';
                         }
 
                         var Dropdown_menu = '';
@@ -438,7 +445,7 @@ $(function() {
                             Dropdown_menu = '<li class="item-flag {%if not user_info%}logIn{%endif%}"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li>';
                         }
                         var created = new timeago(null, 'zh_CN').format(reply.created);
-                        var reply_text = '<div class="PostStream-item" data-index="' + index + '" data-time="' + reply.created + '" data-number="' + index + '" data-id="' + reply.id + '" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/' + reply.author_username + '">' + avatar_text + '<span class="username">' + reply.author_username + '</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="' + reply.created + '" title="' + reply.created + '" data-humantime="true">' + created + '</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#' + index + ' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="' + reply.created + '">' + reply.created + '</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#' + index + '</span></li></ul></header><div class="Post-body">' + reply.content + '</div><aside class="Post-actions"><ul>'+like_button+'<li class="item-reply {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right">'+ Dropdown_menu +'</ul></aside><footer class="Post-footer"><ul>' + like_users_text + reply_users_text + '</ul></footer></div></article><div class="Post-quoteButtonContainer"></div></div>';
+                        var reply_text = '<div class="PostStream-item" data-index="' + index + '" data-time="' + reply.created + '" data-number="' + index + '" data-id="' + reply.id + '" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/' + reply.author_username + '">' + avatar_text + '<span class="username">' + reply.author_username + '</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="' + reply.created + '" title="' + reply.created + '" data-humantime="true">' + created + '</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#' + index + ' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="' + reply.created + '">' + reply.created + '</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#' + index + '</span></li></ul></header><div class="Post-body">' + reply.content + '</div><aside class="Post-actions"><ul>' + like_button + '<li class="item-reply {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right">' + Dropdown_menu + '</ul></aside><footer class="Post-footer"><ul>' + like_users_text + reply_users_text + '</ul></footer></div></article><div class="Post-quoteButtonContainer"></div></div>';
                         all_replys_text += reply_text;
 
                     }
@@ -465,72 +472,87 @@ $(function() {
 });
 
 function getSelected() {
-  if(window.getSelection) { return window.getSelection(); }
-  else if(document.getSelection) { return document.getSelection(); }
-  else {
-    var selection = document.selection && document.selection.createRange();
-    if(selection.text) { return selection.text; }
+    if (window.getSelection) {
+        return window.getSelection();
+    } else if (document.getSelection) {
+        return document.getSelection();
+    } else {
+        var selection = document.selection && document.selection.createRange();
+        if (selection.text) {
+            return selection.text;
+        }
+        return false;
+    }
     return false;
-  }
-  return false;
 }
 
 $(document).ready(function() {
-  
-
-$(document).on('mouseup', '.Post-body', function(e) {
-    var selection = getSelected();
-
-    if (selection!='') {
-        var xx=e.pageX;
-        var yy=e.pageY;
-
-    var PostStream_item= $(this).parent().parent().parent();
-    PostStream_item.find('.Post-quoteButtonContainer').append('<button class="Button PostQuoteButton hasIcon {%if not user_info%}logIn{%endif%}" type="button" title="Quote" style="left: '+xx+'px; top: '+yy+'px; display: block;" data-text="'+selection+'"><i class="icon fa fa-fw fa-quote-left Button-icon"></i><span class="Button-label">引用</span></button>');
-    }
-});
 
 
+    $(document).on('mouseup', '.Post-body', function(e) {
+        var selection = getSelected();
 
-$(document).on('mousedown', 'body', function(e) {
-  e = window.event || e; // 兼容IE7
-  obj = $(e.srcElement || e.target);
-  if ($(obj).is(".PostQuoteButton,.PostQuoteButton *")) {
-    // alert('内部区域'); 
-  } else {
-    $('.PostQuoteButton').remove();
-  }      
-});
+        if (selection != '') {
+            var xx = e.pageX;
+            var yy = e.pageY;
+
+            var PostStream_item = $(this).parent().parent().parent();
+            PostStream_item.find('.Post-quoteButtonContainer').append('<button class="Button PostQuoteButton hasIcon {%if not user_info%}logIn{%endif%}" type="button" title="Quote" style="left: ' + xx + 'px; top: ' + yy + 'px; display: block;" data-text="' + selection + '"><i class="icon fa fa-fw fa-quote-left Button-icon"></i><span class="Button-label">引用</span></button>');
+        }
+    });
 
 
-$(document).on('mouseenter', '.PostUser-avatar', function(e) {
-  var avatar_text = $(this).removeClass('PostUser-avatar').prop("outerHTML");
-  $(this).addClass('PostUser-avatar');
-  var username_text = $(this).parent().find('.username').prop("outerHTML");
-  $(this).parent().parent().parent().append('<div class="UserCard UserCard--popover" style="background-color: rgb(222, 160, 229);"><div class="darkenBackground"><div class="container"><div class="UserCard-profile"><h2 class="UserCard-identity"><a href="/u/wowmac"><div class="UserCard-avatar">'+avatar_text+'</div>'+username_text+'</a></h2><ul class="UserCard-info"><li class="item-bio"><div class="UserBio "><div class="UserBio-content"></div></div></li><li class="item-lastSeen"><span class="UserCard-lastSeen"><i class="icon fa fa-fw fa-clock-o "></i> 19 hours ago</span></li><li class="item-joined">Joined 20 hours ago</li></ul></div></div></div></div>');
-  setTimeout(function() {
+
+    $(document).on('mousedown', 'body', function(e) {
+        e = window.event || e; // 兼容IE7
+        obj = $(e.srcElement || e.target);
+        if ($(obj).is(".PostQuoteButton,.PostQuoteButton *")) {
+            // alert('内部区域'); 
+        } else {
+            $('.PostQuoteButton').remove();
+        }
+    });
+
+
+    $(document).on('mouseenter', '.CommentPost .PostUser-avatar', function(e) {
+        var avatar_text = $(this).removeClass('PostUser-avatar').prop("outerHTML");
+        $(this).addClass('PostUser-avatar');
+        var username_text = $(this).parent().find('.username').prop("outerHTML");
+        $(this).parent().parent().parent().append('<div class="UserCard UserCard--popover" style="background-color: rgb(222, 160, 229);"><div class="darkenBackground"><div class="container"><div class="UserCard-profile"><h2 class="UserCard-identity"><a href="/u/wowmac"><div class="UserCard-avatar">' + avatar_text + '</div>' + username_text + '</a></h2><ul class="UserCard-info"><li class="item-bio"><div class="UserBio "><div class="UserBio-content"></div></div></li><li class="item-lastSeen"><span class="UserCard-lastSeen"><i class="icon fa fa-fw fa-clock-o "></i> 19 小时前</span></li><li class="item-joined">加入于 20 小时前</li></ul></div></div></div></div>');
+        setTimeout(function() {
             $('.UserCard--popover').addClass('in');
         }, 200);
-});
+    });
 
-$(document).on('mouseleave', '.UserCard--popover', function(e) {
-  $('.UserCard--popover').removeClass('in');
-  setTimeout(function() {
+    $(document).on('mouseenter', 'h3 .username', function(e) {
+        var avatar = $(this).parent().find('.PostUser-avatar')
+        var avatar_text = avatar.removeClass('PostUser-avatar').prop("outerHTML");
+        avatar.addClass('PostUser-avatar');
+        var username_text = $(this).prop("outerHTML");
+        $(this).parent().parent().parent().append('<div class="UserCard UserCard--popover" style="background-color: rgb(222, 160, 229);"><div class="darkenBackground"><div class="container"><div class="UserCard-profile"><h2 class="UserCard-identity"><a href="/u/wowmac"><div class="UserCard-avatar">' + avatar_text + '</div>' + username_text + '</a></h2><ul class="UserCard-info"><li class="item-bio"><div class="UserBio "><div class="UserBio-content"></div></div></li><li class="item-lastSeen"><span class="UserCard-lastSeen"><i class="icon fa fa-fw fa-clock-o "></i> 19 小时前</span></li><li class="item-joined">加入于 20 小时前</li></ul></div></div></div></div>');
+        setTimeout(function() {
+            $('.UserCard--popover').addClass('in');
+        }, 200);
+    });
+
+    $(document).on('mouseleave', '.UserCard--popover', function(e) {
+        $('.UserCard--popover').removeClass('in');
+        setTimeout(function() {
             $('.UserCard--popover').remove();
         }, 200);
-  
-});
+
+    });
 
 
-    
+
     {%if user_info%}
-    $(document).on('click', '.PostQuoteButton', function(e) { 
-      //alert('dddd');
-      $('.Composer').addClass('normal');
+    $(document).on('click', '.PostQuoteButton', function(e) {
+        //alert('dddd');
+        $('.Composer').addClass('normal');
         $('.Composer').addClass('visible');
         $('.Composer').css("display", "block");
 
-      $('.Composer .Composer-flexible').append('<blockquote class="uncited"><div><p><a href="https://discuss.flarum.org/d/2352/3" class="PostMention" data-id="20296">BlackSheep</a> '+$(this).attr('data-text')+'</p></div></blockquote><br>');
+        $('.Composer .Composer-flexible').append('<blockquote class="uncited"><div><p><a href="https://discuss.flarum.org/d/2352/3" class="PostMention" data-id="20296">BlackSheep</a> ' + $(this).attr('data-text') + '</p></div></blockquote><br>');
     });
 
     $(document).on('click', '.item-flag', function() {
@@ -626,23 +648,21 @@ $(document).on('mouseleave', '.UserCard--popover', function(e) {
     $(document).on('click', '.item-like', function() {
         var item_like = $(this);
         if (item_like.hasClass('liked')) {
-          return;
+            return;
         }
         var item = $(this).parent().parent().parent().parent().parent();
         var data_id = item.attr('data-id');
-        $.getJSON('/like/'+data_id, function(data) {
-          if (data.success == 1) {
-              item_like.find('span').text('已赞');
-              item_like.addClass('liked');
-              item.find('footer ul').append('<li class="item-liked"><div class="Post-likedBy"><i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/user/{{user_info.username}}"><span class="username">你</span></a> 赞了它.</div></li>');
-          } else {
-            alert('error');
-          }
+        $.getJSON('/like/' + data_id, function(data) {
+            if (data.success == 1) {
+                item_like.find('span').text('已赞');
+                item_like.addClass('liked');
+                item.find('footer ul').append('<li class="item-liked"><div class="Post-likedBy"><i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/user/{{user_info.username}}"><span class="username">你</span></a> 赞了它.</div></li>');
+            } else {
+                alert('error');
+            }
         });
-    });
-    {%endif%}
-
-    
+    }); 
+    {% endif %}
 });
 </script>
 {% endblock %}
